# docker-copyedit

./: .dockerignore  .gitignore  DEVGUIDE.md  Dockerfile  Makefile  README.md  RELEASENOTES.md  docker-copyedit-tests.py  docker-copyedit-tests.pyi  docker-copyedit.py  docker-copyedit.pyi  pyproject.toml  setup.cfg
.github/workflows/: lintcheck.yml  typecheck.yml  unittests.yml
docker_copyedit/: RELEASENOTES.md  docker_copyedit.py  docker_copyedit_tests.py
docker_copyedit1/: RELEASENOTES.md  docker_copyedit.py  docker_copyedit_tests.py
