# __version__

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docker_copyedit"
version = "1.5.1221"
description = "edit docker image metadata (including remove docker volume settings)"
license = "EUPL-1.2"
license-files = [ "EUPL-LICENSE.md" ]
authors = [ { name = "Guido U. Draheim", email = "Guido.Draheim@gmx.de" }]
readme = { "file" = "README", "content-type" = "text/markdown" }

[project.optional-dependencies]
dev = [ "build" ]

[project.urls]
homepage = "https://github.com/gdraheim/docker-copyedit"

# [project.scripts]
# docker-copyedit = "docker-copyedit:main"

[tool.setuptools]
script-files = ["tmp/docker-copyedit.py", "tmp/docker-copyedit.pyi"]
packages = ["docker_copyedit"]
# include-package-data = true

[tool.setuptools.package-data]
"docker_copyedit" = [ "EUPL-LICENSE.md", "RELEASENOTES.md", "docker_copyedit_tests.py" ]

[tool.pycodestyle]
max-line-length = 127
ignore = "E301,E302,E305,E306,E701"
# E301 Add missing blank line. (expected 1 blank line, found 0)
# E302 Add missing 2 blank lines. (expected 2 blank lines, found 0)
# E305 - (expected 2 blank lines after end of function or class)
# E306 - (expected 1 blank line before a nested definition)
# E701 Put colon-separated compound statement on separate lines. (multiple statements on one line (colon))

[tool.mypy]
## strict = true
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
## extra:
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
