# __version__

[metadata]
name = docker-copyedit
version = 1.4.4091
license = EUPL
license_files = 
   EUPL-LICENSE.md
author = Guido U. Draheim
author-email = Guido.Draheim@gmx.de
home-page = https://github.com/gdraheim/docker-copyedit
description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
long-description = file: README.md
requires-dist = setuptools

[options]
include_package_data=True
scripts =
   docker-copyedit.py
   docker-copyedit.pyi

[options.data_files]
data =
   EUPL-LICENSE.md
   RELEASENOTES.md
   docker-copyedit-tests.py

[bdist_wheel]
universal = 1

[mypy]
## strict = true # not allowed in setup.cfg
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
## extra:
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
