# __version__

[metadata]
name = docker-copyedit
version = 1.4.5016
license = EUPL
license_files = 
   EUPL-LICENSE.md
author = Guido U. Draheim
author-email = Guido.Draheim@gmx.de
home-page = https://github.com/gdraheim/docker-copyedit
description = allows to deploy to systemd-controlled containers without starting an actual systemd daemon
long-description = file: README
long-description-content-type = text/markdown
requires-dist = setuptools

[options]
include_package_data=True
scripts =
   docker-copyedit.py
   docker-copyedit.pyi

[options.data_files]
data =
   EUPL-LICENSE.md
   RELEASENOTES.md
   docker-copyedit-tests.py

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 127
ignore = E301,E302,E305,E306,E701
# E301 Add missing blank line. (expected 1 blank line, found 0)
# E302 Add missing 2 blank lines. (expected 2 blank lines, found 0)
# E305 - (expected 2 blank lines after end of function or class)
# E306 - (expected 1 blank line before a nested definition)
# E701 Put colon-separated compound statement on separate lines. (multiple statements on one line (colon))

[mypy]
## strict = true # not allowed in setup.cfg
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
## extra:
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
